# meta2onto

./: .env.TEMPLATE  .gitignore  LICENSE.md  README.md  docker-compose.yml  run_stack.sh
backend/: API_DOCUMENTATION.md  Dockerfile  README.md  launch_api.sh  pyproject.toml
backend/src/: manage.py
backend/src/api/: admin.py  apps.py  models.py  schema.py  serializers.py  tests.py  urls.py  views.py
backend/src/api/migrations/: 0001_initial.py  0002_alter_organism_name.py  0003_remove_externalrelation_from_entity_and_more.py  0004_searchterm.py  0005_alter_searchterm_related_words.py  0006_alter_searchterm_sample.py  0007_rename_sample_searchterm_sample_id.py  0008_alter_searchterm_term.py  0009_auto_20251114_1648.py  0010_searchterm_term_related_words_trgm_gin.py  0011_ontologysearchdocs_ontologysynonyms_ontologyterms.py  0012_search_onto_func.py  0013_ontologysearchresults_and_more.py  0014_searchterm_api_searcht_term_0195b4_idx.py  0015_ontologyterms_api_ontolog_id_69f9a8_idx.py  0016_rename_sample_id_searchterm_series_id.py  0017_remove_searchterm_series_id_searchterm_series.py  0018_geoseriesmetadata.py  0019_geoseriesmetadata_api_geoseri_gse_297173_idx.py  0020_seriesdatabase.py  0021_alter_seriesdatabase_unique_together.py  0022_cart_cartitem.py  0023_alter_cart_id.py  0024_geoplatformmetadata_geosamplemetadata.py  0025_geoseriestoplatforms_and_more.py  0026_geosamplemetadata_doc_geoseriesmetadata_doc_and_more.py  0027_migrate_core_cols.py  0030_feedback.py  0031_optimize_search_onto.py  (+23 more)
backend/src/meta2onto/: asgi.py  settings.py  urls.py  wsgi.py
(+125 files in other folders)
